feat: player traits

--- a/src/app/components/player-traits/player-traits.component.scss
+++ b/src/app/components/player-traits/player-traits.component.scss
@@ -108,3 +108,11 @@ select {
     background-color: #004400;
   }
 }
+
+.pointer {
+  cursor: pointer;
+
+  &:hover {
+    color: rgba(102, 102, 102, 0.726);
+  }
+}
