--- a/src/app/components/player-traits/player-traits.component.html
+++ b/src/app/components/player-traits/player-traits.component.html
@@ -36,7 +36,13 @@
             add
           </span>
         </button>
-        <span>{{ this.playerForm?.value?.currentLife }}/{{ this.playerForm?.value?.totalLife }}</span>
+        <span class="pointer" (click)="changeValue('vida atual', 'currentLife')">
+          {{ this.playerForm?.value?.currentLife }}
+        </span>
+        <span>/</span>
+        <span class="pointer" (click)="changeValue('vida total', 'totalLife')">
+          {{ this.playerForm?.value?.totalLife }}
+        </span>
         <button class="btn-icon"><span class="material-symbols-outlined"> remove </span></button>
       </div>
     </div>
@@ -45,7 +51,13 @@
       <span>Estabilidade</span>
       <div class="flex gap05 counter-attacks">
         <button class="btn-icon"><span class="material-symbols-outlined"> add </span></button>
-        <span>{{ this.playerForm?.value?.currentStability }}/{{ this.playerForm?.value?.totalStability }}</span>
+        <span class="pointer" (click)="changeValue('estabilidade atual', 'currentStability')">
+          {{ this.playerForm?.value?.currentStability }}
+        </span>
+        <span>/</span>
+        <span class="pointer" (click)="changeValue('estabilidade total', 'totalStability')">
+          {{ this.playerForm?.value?.totalStability }}
+        </span>
         <button class="btn-icon"><span class="material-symbols-outlined"> remove </span></button>
       </div>
     </div>
