feat: default sheet

--- a/src/app/components/player-traits/player-traits.component.html
+++ b/src/app/components/player-traits/player-traits.component.html
@@ -11,7 +11,7 @@
     <div class="flex align-center justify-between">
       <label for="description">Origem: </label>
       <select name="origin" formControlName="origin">
-        <option value="" selected disabled hidden>Choose here</option>
+        <option value="none" selected disabled hidden>Choose here</option>
         <option value="central_plaza">Central Plaza</option>
         <option value="little_floreasp">Little Floreasp</option>
         <option value="high_forwib">High Forwib</option>
