--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,19 +4,26 @@
     <div class="flex justify-center flex-wrap gap1">
       <a href="https://www.linkedin.com/in/ofelipescherer/" target="_blank" alt="Linkedin">
         <img
+          alt="Linkedin"
+          onerror=""
           src="https://img.shields.io/badge/-Linkedin-0e76a8?logo=Linkedin&logoColor=white&https://www.linkedin.com/in/ofelipescherer/"
       /></a>
 
       <a href="https://github.com/ofelipescherer" target="_blank" alt="Github">
         <img
+          alt="Github"
+          onerror=""
           src="https://img.shields.io/badge/-Github-100000?logo=github&logoColor=white&link=https://github.com/ofelipescherer"
       /></a>
 
       <a href="https://github.com/ofelipescherer" target="_blank" alt="Github">
-        <img src="https://img.shields.io/github/license/ofelipescherer/rpg-angular-v2.svg"
+        <img
+          alt="Github"
+          onerror=""
+          src="https://img.shields.io/github/license/ofelipescherer/rpg-angular-v2.svg"
       /></a>
 
-      <img src="https://img.shields.io/badge/license-MIT-green" />
+      <img alt="License" onerror="" src="https://img.shields.io/badge/license-MIT-green" />
     </div>
   </div>
 </footer>
