--- a/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
+++ b/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
@@ -32,5 +32,6 @@
         <app-text-area-component type="annotations"></app-text-area-component>
       </div>
     </div>
+    <app-player-fa></app-player-fa>
   </div>
 </div>
