--- a/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
+++ b/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
@@ -16,8 +16,8 @@
     </div>
   </div>
 
-  <div class="flex flex-column align-end pl2">
-    <div class="mb1 flex flex-wrap gap1">
+  <div class="flex flex-column gap1 align-end pl2">
+    <div class="flex flex-wrap gap1">
       <button class="btn-danger">Deletar</button>
       <button class="btn-back" (click)="refresh()">Atualizar</button>
       <button class="btn-add" (click)="updateCS()">Salvar</button>
@@ -31,7 +31,7 @@
       <div id="annotations">
         <app-text-area-component type="annotations"></app-text-area-component>
       </div>
+      <app-player-fa></app-player-fa>
     </div>
-    <app-player-fa></app-player-fa>
   </div>
 </div>
