feat: player traits add remove

--- a/src/app/components/player-traits/player-traits.component.html
+++ b/src/app/components/player-traits/player-traits.component.html
@@ -29,12 +29,7 @@
       <span>Vida</span>
       <div class="flex gap05 counter-attacks">
         <button class="btn-icon">
-          <span
-            class="material-symbols-outlined"
-            (click)="this.playerForm?.get('currentLife')?.setValue(this.playerForm?.value?.currentLife! + 1)"
-          >
-            add
-          </span>
+          <span class="material-symbols-outlined" (click)="addLife()"> add </span>
         </button>
         <span class="pointer" (click)="changeValue('vida atual', 'currentLife')">
           {{ this.playerForm?.value?.currentLife }}
@@ -43,14 +38,18 @@
         <span class="pointer" (click)="changeValue('vida total', 'totalLife')">
           {{ this.playerForm?.value?.totalLife }}
         </span>
-        <button class="btn-icon"><span class="material-symbols-outlined"> remove </span></button>
+        <button class="btn-icon">
+          <span class="material-symbols-outlined" (click)="removeLife()"> remove </span>
+        </button>
       </div>
     </div>
 
     <div class="flex flex-column align-center gap025">
       <span>Estabilidade</span>
       <div class="flex gap05 counter-attacks">
-        <button class="btn-icon"><span class="material-symbols-outlined"> add </span></button>
+        <button class="btn-icon">
+          <span class="material-symbols-outlined" (click)="addStability()"> add </span>
+        </button>
         <span class="pointer" (click)="changeValue('estabilidade atual', 'currentStability')">
           {{ this.playerForm?.value?.currentStability }}
         </span>
@@ -58,7 +57,9 @@
         <span class="pointer" (click)="changeValue('estabilidade total', 'totalStability')">
           {{ this.playerForm?.value?.totalStability }}
         </span>
-        <button class="btn-icon"><span class="material-symbols-outlined"> remove </span></button>
+        <button class="btn-icon">
+          <span class="material-symbols-outlined" (click)="removeStability()"> remove </span>
+        </button>
       </div>
     </div>
 
