--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -2,7 +2,7 @@
 html[data-theme='light'] {
   --background-color: #f4f4f4;
   --background-input: #ffffff;
-  --background-accent: #000c66;
+  --background-accent: #231b6b;
   --text-color: #121218;
   --subtext-color: #00000080;
   --text-accent-color: #ffffff;
