--- a/src/app/components/text-area-component/text-area-component.component.html
+++ b/src/app/components/text-area-component/text-area-component.component.html
@@ -1,4 +1,4 @@
 <div class="mt1 flex flex-column justify-center">
-  <h2>{{ type }}:</h2>
+  <h2>{{ type === 'history' ? 'História' : 'Anotações' }}:</h2>
   <textarea [formControl]="text"></textarea>
 </div>
