--- a/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
+++ b/src/app/rpg-angular/body/character-sheet/character-sheet.component.html
@@ -18,7 +18,7 @@
 
   <div class="flex flex-column gap1 align-end pl1">
     <div class="flex flex-wrap gap1">
-      <button class="btn-danger">Deletar</button>
+      <button class="btn-danger" (click)="deleteCS()">Deletar</button>
       <button class="btn-back" (click)="refresh()">Atualizar</button>
       <button class="btn-add" (click)="updateCS()">Salvar</button>
     </div>
