--- a/src/app/components/player-fa/player-fa.component.scss
+++ b/src/app/components/player-fa/player-fa.component.scss
@@ -74,3 +74,18 @@
 .armaros {
   box-shadow: 0 0 20px #a56371;
 }
+
+.powers-cost {
+  font-size: 12px;
+  color: #8a8a8a;
+}
+
+.powers-title {
+  font-size: 14px;
+}
+
+.powers-desc {
+  font-size: 10px;
+  line-height: 12px;
+  color: #4c4c7b;
+}
