:fire: fix build

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,25 +2,22 @@
   <div class="p2 flex flex-column align-center gap1">
     <span class="font-size-title">Created By Felipe Scherer</span>
     <div class="flex justify-center flex-wrap gap1">
-      <a href="https://www.linkedin.com/in/ofelipescherer/" target="_blank" alt="Linkedin">
+      <a href="https://www.linkedin.com/in/fescherer/" target="_blank" alt="Linkedin">
         <img
           alt="Linkedin"
           onerror=""
-          src="https://img.shields.io/badge/-Linkedin-0e76a8?logo=Linkedin&logoColor=white&https://www.linkedin.com/in/ofelipescherer/"
+          src="https://img.shields.io/badge/-Linkedin-0e76a8?logo=Linkedin&logoColor=white&https://www.linkedin.com/in/fescherer/"
       /></a>
 
-      <a href="https://github.com/ofelipescherer" target="_blank" alt="Github">
+      <a href="https://github.com/fescherer" target="_blank" alt="Github">
         <img
           alt="Github"
           onerror=""
-          src="https://img.shields.io/badge/-Github-100000?logo=github&logoColor=white&link=https://github.com/ofelipescherer"
+          src="https://img.shields.io/badge/-Github-100000?logo=github&logoColor=white&link=https://github.com/fescherer"
       /></a>
 
-      <a href="https://github.com/ofelipescherer" target="_blank" alt="Github">
-        <img
-          alt="Github"
-          onerror=""
-          src="https://img.shields.io/github/license/ofelipescherer/rpg-angular-v2.svg"
+      <a href="https://github.com/fescherer" target="_blank" alt="Github">
+        <img alt="Github" onerror="" src="https://img.shields.io/github/license/fescherer/rpg-angular-v2.svg"
       /></a>
     </div>
   </div>
